@@ -24,6 +24,7 @@
 .objc_class_name_WebTestController
 .objc_class_name_WebURLsWithTitles
 .objc_class_name_WebView
+_WebContextMenuElementLinkLabelKey
 _WebContextMenuElementLinkURLKey
 _WebContextMenuElementImageURLKey
 _WebContextMenuElementStringKey
@@ -33,6 +34,7 @@ _WebHistoryEntriesChangedNotification
 _WebIconDidChangeNotification
 _WebIconSmallSize
 _WebIconMediumSize
+_WebIconLargeSize
 _WebIconNotificationUserInfoSiteURLKey
 
 
